Fix casing, remaining links not opening on same tabs

--- a/content/payments/plural/get-started/integration-modes/emi-flow.mdx
+++ b/content/payments/plural/get-started/integration-modes/emi-flow.mdx
@@ -20,7 +20,7 @@ Following steps are involved in the seamless integration of the EMI transactions
 -   Validate Scheme
 -   Create Order
 -   Process Payment
--   Check Status
+-   Check status
 -   IMEI validation (Applicable only for Brand EMI and for brands which have this as a mandatory requirement)
 
 ## Get EMI Offers
@@ -95,7 +95,7 @@ Once the order is created successfully, an order reference id (`plural_order_id`
 
 <br />
 
-## Check Status
+## Check status
 
 To get the latest status of the order or transaction, merchant can call Inquiry APIs. There are 4 types of Inquiry calls which a merchant can call, which are as follows:
 
