--- a/content/payments/plural/get-started/integration-modes/iframe.mdx
+++ b/content/payments/plural/get-started/integration-modes/iframe.mdx
@@ -12,7 +12,7 @@ The following are the main steps needed for an iFrame integration
 -   Create Order
 -   Embed iFrame Checkout
 -   Implement Return Function
--   Check Status
+-   Check status
 
 ## Create Order
 
@@ -110,7 +110,7 @@ In the order flow as soon as there is a response from the acquirer, return funct
 `}
 </CodeBlockWithCopy>
 
-## Check Status
+## Check status
 
 To get the latest status of the order or transaction, merchant can call Inquiry APIs. There are 4 types of Inquiry calls which a merchant can call, which are as follows:
 
