--- a/content/payments/plural/get-started/integration-modes/redirect-flow.mdx
+++ b/content/payments/plural/get-started/integration-modes/redirect-flow.mdx
@@ -13,7 +13,7 @@ The following are the main steps needed for an Redirect integration
 
 -   Create Order
 -   Call Redirect URL
--   Check Status
+-   Check status
 
 ## Create Order
 
@@ -82,7 +82,7 @@ In the order flow as soon as there is a response from the acquirer, return funct
 
 <br />
 
-## Check Status
+## Check status
 
 To get the latest status of the order or transaction, merchant can call Inquiry APIs. There are 4 types of Inquiry calls which a merchant can call, which are as follows:
 
