--- a/content/payments/plural/get-started/integration-modes/seamless-flow.mdx
+++ b/content/payments/plural/get-started/integration-modes/seamless-flow.mdx
@@ -11,7 +11,7 @@ If a merchant is [PCI DSS](https://www.pcisecuritystandards.org/pci_security/mai
 
 -   Create Order
 -   Process Payment
--   Check Status
+-   Check status
 
 ## Create Order
 
@@ -76,7 +76,7 @@ Once the order is created successfully, an order reference id (`plural_order_id`
 `}
 </CodeBlockWithCopy>
 
-## Check Status
+## Check status
 
 [[API reference](https://developer.pluralonline.com/reference/inquiry-payment)]
 To get the latest status of the order or transaction, merchant can call Inquiry APIs. There are 4 types of Inquiry calls which a merchant can call, which are as follows:
