--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -39,7 +39,7 @@ Once a merchant has been associated to your aggregator account, you can enable p
 <Row>
     <Portion desktopSpan="half" marginBottom="nano">
         <Card padding="small" shape="rounded">
-            <Link href="payments/umap/payments">UPI Payments</Link>
+            <Link href="payments/umap/payments">UPI payments</Link>
             <Text
                 weight="400"
                 marginTop="nano"
