--- a/content/payments/umap/mandates/otm/check-status.mdx
+++ b/content/payments/umap/mandates/otm/check-status.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Check Status
-page_title: UMAP - Mandates - Check Payment Status
+sidebar_title: Check status
+page_title: UMAP - Mandates - Check payment status
 order: 4
 visible_in_sidebar: true
 ---
