--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -22,8 +22,8 @@ UMAP has a robust notification system to provide a transparent experience for ou
 
 Understand the notification payloads for each of our products—
 
-- **<a href="/payments/umap/notifications/payments">Payments ↗</a>**
-- **<a href="/payments/umap/notifications/mandates">Mandates ↗</a>**
-- **<a href="/payments/umap/notifications/refunds">Refunds ↗</a>**
-- **<a href="/payments/umap/notifications/disputes">Disputes ↗</a>**
-- **<a href="/payments/umap/notifications/customer-vpa-verification">Customer VPA verification ↗</a>**
+- **<a href="/payments/umap/notifications/payments" target="_self">Payments ↗</a>**
+- **<a href="/payments/umap/notifications/mandates" target="_self">Mandates ↗</a>**
+- **<a href="/payments/umap/notifications/refunds" target="_self">Refunds ↗</a>**
+- **<a href="/payments/umap/notifications/disputes" target="_self">Disputes ↗</a>**
+- **<a href="/payments/umap/notifications/customer-vpa-verification" target="_self">Customer VPA verification ↗</a>**
