--- a/content/payments/umap/payments/collect-request/check-status.mdx
+++ b/content/payments/umap/payments/collect-request/check-status.mdx
@@ -51,7 +51,7 @@ This is a generic payment status api, that accepts the id of the collect request
             <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId" target="_blank">
-                    Check Payment Status ↗
+                    Check payment status ↗
                 </a>
             </td>
         </tr>
