--- a/content/payments/umap/quickstart.mdx
+++ b/content/payments/umap/quickstart.mdx
@@ -15,52 +15,54 @@ This guide is for you to get started quickly with UMAP, and to select the combin
 
 UMAP caters to two specific categories of businesses—**Aggregators** and **Merchants**. Before you dive into UMAP product suite, explore which category you belong to.
 
-<table>
-    <tr>
-        <th><Text as="h4" align="center">Aggregators</Text></th>
-        <th><Text as="h4" align="center">Merchants</Text></th>
-    </tr>
-    <tr>
-        <td>
-            <Text>Aggregators are online/offline platforms that on-board multiple businesses and provide them value added services. Some examples include—</Text>
-            <Text marginBottom="nano">
-                1. A food delivery app that onboards multiple restaurants, and enabled delivery services for them.
-            </Text>
-            <Text marginBottom="nano">
-                2. Website creation platform with a storefront, that plugin providers can integrate with.
-            </Text>
-            <Text marginBottom="nano">
-                3. Insurance and loan marketplaces that can be used by any distributors to sell to customers.
-            </Text>
-        </td>
-        <td>
-            <Text>Merchants are online/offline businesses that provide goods and services directly to customers. Some examples include—</Text>
-            <Text marginBottom="nano">
-                1. Loan providers who enable customers to get credit in their account and enable collections for repayment.
-            </Text>
-            <Text marginBottom="nano">
-                2. Direct-to-consumer brands that want to enable UPI as a payment option on their website/app or other messaging channels.
-            </Text>
-            <Text marginBottom="nano">
-                3. Streaming platforms that provide online services for education or entertainment through subscriptions and one-time plans.
-            </Text>
-        </td>
-    </tr>
-</table>
+<Row>
+    <Portion desktopSpan="half" tabletLandscapeSpan="half" tabletPortraitSpan="half">
+        <Text as="h4">Aggregators</Text>
+        <Text>Aggregators are online/offline platforms that on-board multiple businesses and provide them value added services. Some examples include—
+            <ol>
+                <li>
+                    A food delivery app that onboards multiple restaurants, and enabled delivery services for them.
+                </li>
+                <li>
+                    Website creation platform with a storefront, that plugin providers can integrate with.
+                </li>
+                <li>
+                    Insurance and loan marketplaces that can be used by any distributors to sell to customers.
+                </li>
+            </ol>
+        </Text>
+    </Portion>
+    <Portion desktopSpan="half" tabletLandscapeSpan="half" tabletPortraitSpan="half">
+        <Text as="h4">Merchants</Text>
+        <Text>Merchants are online/offline businesses that provide goods and services directly to customers. Some examples include—
+            <ol>
+                <li>
+                    Loan providers who enable customers to get credit in their account and enable collections for repayment.
+                </li>
+                <li>
+                    Direct-to-consumer brands that want to enable UPI as a payment option on their website/app or other messaging channels.
+                </li>
+                <li>
+                    Streaming platforms that provide online services for education or entertainment through subscriptions and one-time plans.
+                </li>
+            </ol>
+        </Text>
+    </Portion>
+</Row>
 
 <br/>
 
 #### Choose how to integrate
 <Row>
     <Portion desktopSpan="half">
-        <a href="/payments/umap/quickstart/aggregators">
+        <a href="/payments/umap/quickstart/aggregators" target="_self">
             <Card padding="small" shape="rounded">
                 Integrate as an aggregator
             </Card>
         </a>
     </Portion>
     <Portion desktopSpan="half">
-        <a href="/payments/umap/quickstart/merchants">
+        <a href="/payments/umap/quickstart/merchants" target="_self">
             <Card padding="small" shape="rounded">
                 Integrate as a merchant
             </Card>
