--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -61,7 +61,7 @@ processed
     info={{
         description: "Create refund.  ",
         slug: "/payments/umap/refunds-disputes/create-refund-api",
-        title: "Create Refund",
+        title: "Create refund",
     }}
 />
 
