--- a/content/payments/umap/refunds-disputes/create-refund-api.mdx
+++ b/content/payments/umap/refunds-disputes/create-refund-api.mdx
@@ -93,6 +93,6 @@ visible_in_sidebar: true
     info={{
         description: "Check refund status.  ",
         slug: "/payments/umap/refunds-disputes/check-refund-status-api",
-        title: "Check Refund Status",
+        title: "Check refund status",
     }}
 />
