--- a/content/payments/umap/mandates/single-block-multi-debit/check-status.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/check-status.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Check Status
+sidebar_title: Check status
 page_title: UMAP - Mandates - Check payment status
 order: 3
 visible_in_sidebar: true
