--- a/content/payments/billpay/pre-built-screens/custom-payment/cross-platform.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/cross-platform.mdx
@@ -175,7 +175,10 @@ The `initiatePayment` method in the `controller` takes an object param with the 
 - `callback` URL which needs to be loaded in the webview once the payment is completed. Example —`https://billpay.setu.co/payment-callback/68c7217b-8fa7-4c1f-8e5f-317ff3027668`
 - `beneVpa` to which amount is to be transferred—this is relevant only if you can transfer in real time using UPI rails.
 - `remarks` used to communicate information between mobile app and webview
-- `mobileNumber` the customer mobile number used for the payment
+- `mobileNumber` mobile number used for the session. Example - `9876543210`
+- `refId` BBPS reference ID linked to a particular bill (only available for fetch billers). Example - `CMA0I65RCU2I32C3L0H0KNYQYAG40021831`
+- `customerId` linked to a particular session. Example - `cust@1234`
+- `allowedPaymentModes` comma separated list of modes allowed for this payment. One of these should be sent in the `paymentMode` in the <a href="/payments/billpay/pre-built-screens/custom-payment/apis#webhook">payment confirmation webhook.</a>
 
 When initiate_payment case is called by the webview, your app needs to do the following—
 
