--- a/content/payments/billpay/pre-built-screens/custom-payment/iOS.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/iOS.mdx
@@ -105,13 +105,21 @@ func userContentController(_ userContentController: WKUserContentController, did
         let billAmount = dict["data"]?["amount"] as! String
         let orderID = dict["data"]?["orderId"] as! String
         let beneficiaryVPA = dict["data"]?["beneficiaryVPA"] as! String
+        let mobileNumber = dict["data"]?["mobileNumber"] as! String
+        let refId = dict["data"]?["refId"] as! String
+        let customerId = dict["data"]?["customerId"] as! String
+        let allowedPaymentModes = dict["data"]?["allowedPaymentModes"] as! String
         
         let vc = PaymentViewController(
           successLink: successLink + successParams,
           remarks: remarks,
           billAmount: billAmount,
           orderID: orderID,
-          beneficiaryVPA: beneficiaryVPA
+          beneficiaryVPA: beneficiaryVPA,
+          mobileNumber: mobileNumber,
+          refId: refId,
+          customerId: customerId,
+          allowedPaymentModes: allowedPaymentModes
         )
         
         let navVC = UINavigationController(rootViewController: vc)
@@ -160,9 +168,13 @@ The `initiate_payment` case in the the `userContentController` takes the followi
 - `amount` to be paid by the customer. Example — `3522.20`
 - `callback` URL which needs to be loaded in the webview once the payment is completed. Example — `https://billpay.setu.co/payment-callback/68c7217b-8fa7-4c1f-8e5f-317ff3027668`
 - `beneficiaryVPA` to which amount is to be transferred—this is relevant only if you can transfer in real time using UPI rails.
-- `remarks` used to communicate information between mobile app and webview
+- `remarks` used to communicate information between mobile app and webview.
+- `mobileNumber` mobile number used for the session. Example - `9876543210`
+- `refId` BBPS reference ID linked to a particular bill (only available for fetch billers). Example - `CMA0I65RCU2I32C3L0H0KNYQYAG40021831`
+- `customerId` linked to a particular session. Example - `cust@1234`
+- `allowedPaymentModes` comma separated list of modes allowed for this payment. One of these should be sent in the `paymentMode` in the <a href="/payments/billpay/pre-built-screens/custom-payment/apis#webhook">payment confirmation webhook.</a>
 
-When `initiate_payment` case is called by the `webview`, your app needs to do the following—
+When `initiate_payment` case is called by the `webview`, your app needs to do the following-
 
 1. Remove the webview
 2. Initiate the payment flow
