--- a/content/payments/billpay/pre-built-screens/custom-payment/website.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/website.mdx
@@ -61,8 +61,8 @@ Note that the API key is issued by you
   "amount": 1201.00,
   "customerMobileNumber": "9481773053",
   "postPaymentUrl": "https://billpay.setu.co/payment/post-payment/c4e154e6-7b2b-4e0a-9749-60499b61ce93",
-  "allowedPaymentMethods": [
-    "CASH", "UPI"
+  "allowedPaymentModes": [
+    "CASH", "UPI", "CREDIT CARD" // list of allowed values for "paymentMode" in webhooks
   ]
 }`}
 </CodeBlockWithCopy>
