remove broken custom payment webhook API reference

--- a/content/payments/billpay/pre-built-screens/custom-payment.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment.mdx
@@ -44,7 +44,7 @@ You need to call the following APIs—
        Create one time link
    </a>
 2. <a
-       href="/payments/billpay/api-reference/white-label#/category~CustomPaymentWebhook/operation~CouCustomPaymentWebhook"
+       href="/payments/billpay/pre-built-screens/custom-payment/apis#webhook"
        target="_blank"
    >
        Confirm payment
