--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -347,36 +347,41 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | after          | `string`                                | Billers are sorted via the Biller ID. Providing a biller Id fetches billers right after this biller in a paginated way. |
 | search         | `string`                                | searches the provided text over biller name and biller alias                                                            |
 | pincode        | `string`                                |                                                                                                                         |
-| state          | `string`                                |                                                                                                                         |
-| city           | `string`                                |                                                                                                                         |
+| coverage       | `string`                                | BBPS coverage. Used to search billers having a specific coverage area                                                   |
+| country        | `string`                                | BBPS Country Code. Used to search billers operating in a certain country                                                |
+| state          | `string`                                | BBPS state code. Used to search billers operating in a certain state                                                    |
+| city           | `string`                                | city name, used to search billers operating in a certain city                                                           |
+| updatedSince   | `date-time`                             | Fetch billers updated on or after the provided timestamp                                                                |
 | tags           | `string`                                |                                                                                                                         |
 | paymentChannel | [Payment Channel](#payment-channel)`[]` |                                                                                                                         |
 | paymentMode    | [Payment Mode](#payment-mode)`[]`       |                                                                                                                         |
 
 ### Response
 
-| parameter              | type                                                    | description                                                                                                                             |
-| ---------------------- | ------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
-| categoryName           | `string`                                                | Biller Category                                                                                                                         |
-| city                   | `string`                                                | Biller City                                                                                                                             |
-| coverage               | `string`                                                | Biller coverage                                                                                                                         |
-| createdAt              | `date-time`                                             | Biller Created At                                                                                                                       |
-| customerParams         | [Biller Customer Params](#biller-customer-params)`[]`   | Customer Parameter format descrption                                                                                                    |
-| exactness              | [Exactness](#exactness)                                 | Biller Exactness                                                                                                                        |
-| fetchApiType           | [Fetch API Type](#fetch-api-type)                       | Biller Fetch API Type                                                                                                                   |
-| id                     | `string`                                                | Biller ID                                                                                                                               |
-| logo                   | `string`                                                | Biller logo                                                                                                                             |
-| modifiedAt             | `date-time`                                             | Biller Created At                                                                                                                       |
-| name                   | `string`                                                | Biller Name                                                                                                                             |
-| payWithoutFetchAllowed | `bool`                                                  | Whether biller allows bill payment without a fetch or not. Even in case of `BILL_FETCH` API type, certain bills make the fetch optional |
-| paymentChannels        | [Biller Payment Channel](#bill-payment-channel)`[]`     | Payment Channel limits set by the biller.                                                                                               |
-| paymentModes           | [Payment Limit](#payment-limit)`[]`                     | Payment mode limits set by the biller.                                                                                                  |
-| pincode                | `string`                                                | Biller Pincode                                                                                                                          |
-| supportsPendingStatus  | `bool`                                                  | Whether the biller supports pending status. In this case, a payment can be in progress for up to 2 days.                                |
-| tags                   | `string`                                                | Additional Tags of the biller.                                                                                                          |
-| state                  | `string`                                                | Biller State                                                                                                                            |
-| plans                  | [Biller-Plan-Information](#biller-plan-information)`[]` | Plans provided by the biller.                                                                                                           |
-
+| parameter               | type                                                    | description                                                                                                                             |
+| ----------------------- | ------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
+| categoryName            | `string`                                                | Biller Category                                                                                                                         |
+| city                    | `string`                                                | Biller City                                                                                                                             |
+| country                 | `string`                                                | Biller Country                                                                                                                          |
+| coverage                | `string`                                                | Biller coverage                                                                                                                         |
+| createdAt               | `date-time`                                             | Biller Created At                                                                                                                       |
+| customerParams          | [Biller Customer Params](#biller-customer-params)`[]`   | Customer Parameter format descrption                                                                                                    |
+| exactness               | [Exactness](#exactness)                                 | Biller Exactness                                                                                                                        |
+| fetchApiType            | [Fetch API Type](#fetch-api-type)                       | Biller Fetch API Type                                                                                                                   |
+| id                      | `string`                                                | Biller ID                                                                                                                               |
+| logo                    | `string`                                                | Biller logo                                                                                                                             |
+| modifiedAt              | `date-time`                                             | Biller Modified At                                                                                                                      |
+| name                    | `string`                                                | Biller Name                                                                                                                             |
+| payWithoutFetchAllowed  | `bool`                                                  | Whether biller allows bill payment without a fetch or not. Even in case of `BILL_FETCH` API type, certain bills make the fetch optional |
+| paymentChannels         | [Biller Payment Channel](#bill-payment-channel)`[]`     | Payment Channel limits set by the biller.                                                                                               |
+| paymentModes            | [Payment Limit](#payment-limit)`[]`                     | Payment mode limits set by the biller.                                                                                                  |
+| pincode                 | `string`                                                | Biller Pincode                                                                                                                          |
+| supportsPendingStatus   | `bool`                                                  | Whether the biller supports pending status. In this case, a payment can be in progress for up to 2 days.                                |
+| tags                    | `string`                                                | Additional Tags of the biller.                                                                                                          |
+| state                   | `string`                                                | Biller State                                                                                                                            |
+| plans                   | [Biller-Plan-Information](#biller-plan-information)`[]` | Plans provided by the biller.                                                                                                           |
+| enforcesSameDayFetchPay | `bool`                                                  | Whether the biller requires bill payment to be on the same calendar day as bill fetch.                                                  |
+| bbpsUpdateTimestamp     | `date-time`                                             | Last updated date-time of the Biller accurate to the nearest day.                                                                       |
 <hr class="primary" />
 
 ## Dispute Request
